# Warehouse_drone

./: README.md  bild_20_ubuntu.sh  build_20_ubuntu.sh  build_clover.sh  build_simulator.sh  file2.py  kino_replan.launch  traj_server.cpp  vl_ros.ino
detection/: CMakeLists.txt  README.md  inference_target_face.py  inference_target_face_ros.py  main.cpp  setup.sh  yolo_inference_ros.py
detection_cpp/: CMakeLists.txt  README.md  inference_threaded.cpp
kostya/: inference_target_face.py
simple_detection/: README.md  detector.py  detector_threaded.py
